--- a/lab-p2/ops.ipynb
+++ b/lab-p2/ops.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# add parentheses to get 27\n",
-    "3 ** 4 - 1"
+    "3 ** (4 - 1)"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# add parentheses to get 0\n",
-    "-2 - 2"
+    "-(2 - 2)"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# add parentheses to get 0.5\n",
-    "1 / 1 + 1"
+    "1 / (1 + 1)"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# add parentheses to get 1\n",
-    "100 + 5 % 2"
+    "(100 + 5) % 2"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# add parentheses to get False\n",
-    "not True or True"
+    "not (True or True)"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# add parentheses to get True\n",
-    "False == True and False"
+    "False == (True and False)"
    ]
   }
  ],
